--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-tv-navigation",
-  "version": "1.0.2",
-  "description": "A react-tv-based implementation of Spatial Navigation by Luke Chang",
+  "version": "1.0.3",
+  "description": "Simple spatial anvigation with layers support",
   "main": "dist/bundle.umd.js",
   "files": [
     "dist/",
