--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-tv-navigation",
-  "version": "1.0.4",
-  "description": "Simple spatial anvigation with layers support",
+  "version": "1.0.5",
+  "description": "Simple spatial navigation with layers support",
   "main": "dist/bundle.umd.js",
   "files": [
     "dist/",
